fix informações pessoais

--- a/contato.html
+++ b/contato.html
@@ -16,7 +16,7 @@
 				<!-- Titulo do Cabeçalho -->
 				<div id="titulo">
 					<!-- Seu nome -->
-					<h1>Generation Brasil</h1>
+					<h1>Tiago Alves</h1>
 				</div>
 
 				<!-- Conteudo do Menu da Página (header) -->
@@ -68,11 +68,11 @@
                 <!-- Seção do Google Maps -->
                 <article id="mapa">
                     
-                    <p>Av. Paulista, 100</p>
-                    <p>São Paulo - SP</p>
+                    <p>Antonio Oliverira Cunha, 261</p>
+                    <p>Franco da Rocha - SP</p>
 
                     <iframe 
-                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.106696296001!2d-46.65390548535577!3d-23.564611167596592!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94ce59c7f481fd9f%3A0x9982bfde4df54830!2sAv.%20Paulista%2C%201000%20-%20Bela%20Vista%2C%20S%C3%A3o%20Paulo%20-%20SP%2C%2001310-100!5e0!3m2!1spt-BR!2sbr!4v1594056507065!5m2!1spt-BR!2sbr" 
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d229.02049862170784!2d-46.754915119007805!3d-23.30385609594195!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x94cee149d19f7203%3A0x903af487abf41d2e!2sR.%20Ant%C3%B4nio%20Oliveira%20Cunha%2C%20251%20-%20Parque%20dos%20Eucaliptos%2C%20Franco%20da%20Rocha%20-%20SP%2C%2007832-060!5e0!3m2!1spt-BR!2sbr!4v1736255104784!5m2!1spt-BR!2sbr" 
                         width="400"
                         height="250"
                         frameborder="0"
@@ -88,28 +88,25 @@
 
 		</main>
 
-		<!-- Rodapé da Página (footer) -->
+		<!-- Rodapé da Página (footer)-->
 		<footer>
 
-			<!-- Seção de Contato - Redes Sociais -->
-            <section id="redes_sociais">
-
-                    <a href="">
-                        <img src="assets/img/linkedin.svg" alt="LinkedIn" />
-                    </a>
-                    <a href="">
-                        <img src="assets/img/github.svg" alt="Github" />
-                    </a>
-                    <a href="">
-                        <img src="assets/img/instagram.svg" alt="Instagram" />
-                    </a>
-
-            </section>
-
-			<h3>
-				Feito com 🧡 por Generation Brasil - 2024
-			</h3>
-
-		</footer>
+			<!-- Seção de Contato - Redes Sociais-->
+			 <section id="redes_sociais">
+	
+				<a href="www.linkedin.com/in/tiago-salves" target="_blank">
+					<img src="assets/img/linkedin.svg" alt="Linkedin">
+				</a>
+				<a href="https://github.com/TiihAlves" target="_blank">
+					<img src="assets/img/github.svg" alt="Github">
+				</a>
+				<a href="https://www.instagram.com/alves.tiih/" target="_blank">
+					<img src="assets/img/instagram.svg" alt="Instagram">
+				</a>
+	
+			 </section>
+	
+			 <h3>Feito com ❤ por Tiago Alves em parceria com Generation Brasil - 2025</h3>
+		   </footer>
 	</body>
-</html>
+	</html>
