--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
              <div id="titulo">
 
                 <!-- Seu Nome-->
-                 <h1>Generation Brasil</h1>
+                 <h1>Tiago Alves</h1>
 
              </div>
 
@@ -56,28 +56,35 @@
          <section id="about">
 
             <!-- Titulo da Seção-->
-             <h2>Sobre a Generation Brasil</h2>
+             <h2>Sobre Tiago</h2>
 
              <!-- Conteúdo da Seção-->
               <div id="conteudo">
 
                 <!-- Imagem do criador do conteúdo-->
                  <img 
-                    src="./assets/img/user_01.svg" 
+                    src="https://ik.imagekit.io/tkeh5vknk/Perfil.jpeg?updatedAt=1736254307376" 
                     alt="Foto do criador desse conteudo">
 
                     <!-- Textoo sobre o criador do conteúdo-->
                      <article id="sobre_texto">
                         <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing
-							elit. Voluptatem odio possimus, dolorem earum atque
-							itaque quas soluta placeat iure omnis porro cum
-							debitis sequi libero! Deleniti vitae quis hic
-							cumque. Lorem ipsum, dolor sit amet consectetur
-							adipisicing elit. Eius inventore ullam, quia
-							deserunt enim cumque hic officia repudiandae ad ab
-							et sapiente qui vitae accusamus adipisci provident
-							sit assumenda laboriosam!
+                            Integrante da 78ª Turma de Java Full Stack da Generation Brasil,  onde aprendi sobre as principais tecnologias do mercado, como:
+                            - Java
+                            - Spring Tools
+                            - SQL
+                            - JavaScript
+                            - React
+
+                            Além de ter conquistado certificações profissionalizantes nas áreas de Desenho Gráfico e Desenvolvimento de Sistemas C#. Aonde eu aprendi a trabalhar com:
+
+                            Adobe Photoshop               
+                            Adobe illustrator                 
+                            Adobe Premiere
+                            CorelDraw
+
+                            Visual Studios
+                            My SQL
                         </p>
                      </article>
               </div>
@@ -110,19 +117,19 @@
         <!-- Seção de Contato - Redes Sociais-->
          <section id="redes_sociais">
 
-            <a href="">
+            <a href="www.linkedin.com/in/tiago-salves" target="_blank">
                 <img src="assets/img/linkedin.svg" alt="Linkedin">
             </a>
-            <a href="">
+            <a href="https://github.com/TiihAlves" target="_blank">
                 <img src="assets/img/github.svg" alt="Github">
             </a>
-            <a href="">
+            <a href="https://www.instagram.com/alves.tiih/" target="_blank">
                 <img src="assets/img/instagram.svg" alt="Instagram">
             </a>
 
          </section>
 
-         <h3>Feito com ❤ por Generation Brasil - 2025</h3>
+         <h3>Feito com ❤ por Tiago Alves em parceria com Generation Brasil - 2025</h3>
        </footer>
 </body>
 </html>
