--- a/contato.html
+++ b/contato.html
@@ -126,5 +126,7 @@
 			 <h3>Feito com ❤ por Tiago Alves em parceria com Generation Brasil - 2025</h3>
 		</footer>
 
+		 <!-- Script JavaScript-->
+		 <script src="assets/js/script.js"></script>
 	</body>
 	</html>
